<resources>
    <string name="app_name">The Movie Db</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="favorite">Favorite</string>
    <string name="find_movie_you_want">Find movie you want</string>
    <string name="search_movie">Search Movie…</string>
    <string name="find_tv_show_you_want">Find tv show you want</string>
    <string name="oopss_something_went_wrong">Oopss.. something went wrong</string>
    <string name="overview">Overview</string>
    <string name="genre">Genre</string>
    <string name="oopss_movie_you_want_not_found">Oopss.. Movie you want not found</string>
    <string name="setting">Setting</string>
    <string name="change_language">Change Language</string>
    <string name="change_theme">Change Theme</string>
    <string name="top_billed_cast">Top Billed Cast</string>
    <string name="series_cast">Series Cast</string>
    <string name="search_tv_show">Search Tv Show…</string>
    <string name="movie_popular">Popular Movie</string>
    <string name="now_playing_movie">Now Playing Movie</string>
    <string name="see_more"><![CDATA[See More >]]></string>
    <string name="upcoming_movie">Upcoming Movie</string>
    <string name="popular_tv_show">Popular Tv Show</string>
    <string name="airing_today_tv_show">Airing Today Tv Show</string>
    <string name="top_rated_tv_show">Top Rated Tv Show</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="creating_an_account_means_you_re_okay_with_our_terms_of_service_and_our_privacy_policy">Creating an account means you\'re okay with our Terms of Service and our Privacy Policy</string>
    <string name="create_an_account">Create an Account</string>
    <string name="notice_password_less_8_characters">The password can not be less than 8 characters</string>
    <string name="password_doesnt_match">The password doesn\'t match</string>
    <string name="fill_field" translatable="false">Fill all field</string>
    <string name="input_valid_email">Please Input valid email</string>
    <string name="email_verification">Email Verification</string>
    <string name="check_your_email_and_verify">Check your email and verify</string>
    <string name="next">Next</string>
    <string name="email_registered">Email has been registered</string>
    <string name="email_not_verified">Email not verified</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_photo">Change Photo</string>
    <string name="save">Save</string>
</resources>