<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog"
            android:gravity="center"
            android:fontFamily="@font/poppins"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/email_verification"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_title">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/animation" />

            <TextView
                android:id="@+id/dialog_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/check_your_email_and_verify"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_button_black"
                android:fontFamily="@font/poppins"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>