<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signup.SignUpActivity">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="@drawable/ic_baseline_arrow_back_sign_up"
            app:layout_constraintBottom_toBottomOf="@+id/label_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/label_sign_up"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/label_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Sign Up"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText"
            tools:layout_editor_absoluteX="32dp" />

        <TextView
            android:id="@+id/label_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/email"
            app:layout_constraintTop_toBottomOf="@id/label_sign_up" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_text"
            android:hint="example@example.com"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/label_email"
            tools:ignore="Autofill,HardcodedText,LabelFor" />

        <TextView
            android:id="@+id/label_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Password"
            app:layout_constraintTop_toBottomOf="@id/email_field"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_text"
            android:hint="8+ Characters"
            android:inputType="textPassword"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/label_password"
            tools:ignore="Autofill,HardcodedText,LabelFor" />

        <TextView
            android:id="@+id/label_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/confirm_password"
            app:layout_constraintTop_toBottomOf="@id/password_field" />

        <EditText
            android:id="@+id/confirm_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_text"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/label_confirm_password"
            tools:ignore="Autofill,HardcodedText,LabelFor" />

        <TextView
            android:id="@+id/label_term_of_service"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/creating_an_account_means_you_re_okay_with_our_terms_of_service_and_our_privacy_policy"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_field" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_button_black"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/create_an_account"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_term_of_service" />

        <include
            android:id="@+id/loading"
            layout="@layout/loading_auth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>