<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.movie.MovieFragment">

        <include
            android:id="@+id/appbar"
            layout="@layout/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_find_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/find_movie_you_want"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/appbar" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_searchview"
            android:focusable="false"
            app:defaultQueryHint="@string/search_movie"
            app:iconifiedByDefault="false"
            app:layout_constraintBottom_toTopOf="@id/nested_scroll_view"
            app:layout_constraintTop_toBottomOf="@id/text_find_movie"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search_movie" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/label_movie_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/movie_popular"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/see_more_popular_movie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/see_more"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/label_movie_popular"
                    app:layout_constraintEnd_toEndOf="@+id/label_movie_popular"
                    app:layout_constraintTop_toTopOf="@+id/label_movie_popular" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_movie"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/label_movie_popular"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_list_movie_home" />


                <TextView
                    android:id="@+id/label_now_playing_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/now_playing_movie"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/recycler_view_movie" />

                <TextView
                    android:id="@+id/see_more_now_playing_movie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/see_more"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/label_now_playing_movie"
                    app:layout_constraintEnd_toEndOf="@+id/label_now_playing_movie"
                    app:layout_constraintTop_toTopOf="@+id/label_now_playing_movie" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_now_playing_movie"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/label_now_playing_movie"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_list_movie_home" />

                <TextView
                    android:id="@+id/label_upcoming_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/upcoming_movie"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/recycler_view_now_playing_movie" />

                <TextView
                    android:id="@+id/see_more_upcoming_movie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/see_more"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/label_upcoming_movie"
                    app:layout_constraintEnd_toEndOf="@+id/label_upcoming_movie"
                    app:layout_constraintTop_toTopOf="@+id/label_upcoming_movie" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_upcoming_movie"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/label_upcoming_movie"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_list_movie_home" />


                <include
                    android:id="@+id/view_error"
                    layout="@layout/view_error"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/loading"
            layout="@layout/loading_home"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/search_view"
            tools:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>